fix spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -223,7 +223,6 @@ section {
 }
 
 
-
 .bgimage-features {
     width: 100%;
     height: 828.99px;
@@ -234,6 +233,26 @@ section {
     position: relative;
 }
 
+.bgimage-features:last-child{
+    padding-top: 5rem;
+    background-position: top 3rem center;
+}
+
+.form-title{
+    padding-top: 2rem;
+}
+
+.form-footer{
+    height: 100%;
+}
+
+form > .col-12:last-child{
+    margin: 1rem 0;
+}
+
+.footer .bg-form form button.btn-enviar{
+    margin: 0;
+}
 
 .feature-text {
     text-align: center;
@@ -308,9 +327,7 @@ section {
 
 .footer .bg-form {
     box-shadow: 2px 6px 13px -3px rgba(0, 0, 0, 0.41);
-    height: 28rem;
     margin-bottom: 4rem;
-    padding: 1rem;
     background-color: #fff;
     border-radius: 1rem;
 }
